# auto-derby

./: .gitignore  dev-requirements.txt  pixi.toml  pyproject.toml  pyrightconfig.json  requirements.txt
auto_derby/: __main__.py  _config.py  action.py  constants.py  imagetools.py  limited_sale.py  ocr.py  window.py
plugins/: R樫本理子.py  SSR玉座に集いし者たち.py  SSR祖にして導くもの.py  SSR秋川理事長.py  SSR都留岐涼花.py  SSR齊聚於王座之人.py  auto_event.py  bluestacks.py  custom_race.py  custom_templates.py  disable_web.py  force_long_distance.py  force_race_retry.py  go_out_friends.py  limited_sale_pause.py  many_races.py  never_mile.py  no_continue_race.py  no_max.py  ocr_only.py  oguri_race.py  only_g1.py  overuse_nurturing_SSR樫本理子_for_mile_medium_long_distance.py  overuse_nurturing_item_score.py  overuse_nurturing_rotation_race_for_medium_long_distance.py  overuse_nurturing_training_score.py  overuse_race_nurturing_item_score.py  overuse_race_nurturing_rotation_race_for_mile_medium_long_distance.py  overuse_training_SSR樫本理子.py  overuse_training_SSR樫本理子_for_medium_long_distance.py  overuse_training_SSR樫本理子_for_mile_medium_long_distance.py  overuse_training_item_score.py  overuse_training_rotation_race_for_medium_long_distance.py  overuse_training_rotation_race_for_mile_medium_long_distance.py  overuse_training_training_score.py  prefer_long_distance.py  prefer_short_distance.py  race_campaign.py  unfinished_race.py  use_hummer_in_twinkle_star_climax_race.py  (+1 more)
scripts/: capture_custom_template_position.py  extract_single_mode_races.py  recognize_character_detail_scene.py  recognize_command_scene.py  (+6 more)
(+275 files in other folders)
