
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "pywin32>=303",
    "opencv-python>=4.7.0.72",
    "opencv-contrib-python>=4.7.0.72",
    "cast-unknown>=0.1.7",
    "numpy>=1.22.3",
    "pillow>=9.5.0",
    "mouse>=0.7.1",
    "adb-shell>=0.4.3"
]
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
]
lint = [
    "black>=23.7.0",
]
